Fixed animation getting stuck on mobile experience page.

--- a/src/App.scss
+++ b/src/App.scss
@@ -473,16 +473,17 @@ $option-hov-green: #24af90;
     display: flex;
     flex-direction: row;
     align-items: center;
-    &:hover {
+    &:hover,
+    &:focus {
       > .hover-block {
-        height: 30px;
-        box-shadow: 0 0 10px 7.5px $green;
+        // box-shadow: 0 0 10px 7.5px $green;
       }
       color: #E2E8DD;
       -webkit-animation: slide-left .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
   	          animation: slide-left .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     }
-    &:not(:hover) {
+    &:not(:hover),
+    &:not(:focus) {
       -webkit-animation: slide-right .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
   	          animation: slide-right .5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     }
